# skyrim

./: .env  .env.example  .env_example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  build.sh  environment.yaml  environment.yml  environment_cuda12.yml  fetch.py  models.py  pyproject.toml  requirements.txt  run.py  test_imps.py
modal/: forecast.py  forecast_dev.py
notebooks/: 01_quickstart.ipynb  02_ifs_model.ipynb  03_gfs_model.ipynb  04_ifs_vs_gfs.ipynb  05_cds_era5.ipynb  pg_01.ipynb  pg_02_graphcast.ipynb  pg_03_fetch.ipynb  pg_04_predwrapper.ipynb  pg_05_rollout.ipynb
remote/: forecast_dev.py
scripts/: generate_dataset.py
skyrim/: __init__.py  common.py  consts.py  conts.py  fetch.py  forecast.py  inference.py  models.py  prediction.py  skyrim.py  utils.py
skyrim/client/: __init__.py
skyrim/core/: __init__.py  consts.py  fetch.py  skyrim.py  utils.py
skyrim/core/models/: __init__.py  base.py  dlwp.py  ensemble.py  fengwu.py  fourcastnet.py  fourcastnet_v2.py  fuxi.py  graphcast.py  pangu.py  utils.py
skyrim/libs/benchmark/: __init__.py  cds.py  observations.py  openmeteo.py
skyrim/libs/finetune/: __init__.py
skyrim/libs/ic/: __init__.py  ifs.py
skyrim/libs/nwp/: README.md  __init__.py  ens.py  gfs.py  ifs.py  ncar_client.py  utils.py
skyrim/libs/plotting/: __init__.py  generate_rollout_gif.py  plot_wind_components.py  plot_wind_speed.py
skyrim/modal/: forecast.py
skyrim/models/: __init__.py  base.py  dlwp.py  ensemble.py  fourcastnet.py  fourcastnet_v2.py  fuxi.py  graphcast.py  pangu.py  utils.py
tests/: conftest.py  test_client.py  test_common.py
tests/core/: test_base.py  test_graphcast.py  test_skyrim.py
tests/libs/: test_benchmark.py
tests/libs/benchmark/: test_cds.py
tests/libs/ic/: test_ic_ifs.py  test_ifs.py
tests/libs/nwp/: test_ens.py  test_gfs.py  test_ifs.py  test_ncar_client.py
tests/skyrim/: test_base.py  xtest_base.py
