[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Skyrim"
version = "0.0.1"
description = "AI weather models united."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
maintainers = [
  { name = "SecondLaw Research", email = "efe@2lw.ai" },
  { name = "SecondLaw Research", email = "murat@2lw.ai" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
keywords = ["pytorch", "weather", "forecasting", "ai", "ml", "xarray", "dl"]
dependencies = [
  "modal",
  "loguru",
  "xarray[zarr]",
  "base58",
  "botocore",
  "aiobotocore",
  'boto3',
  's3fs==0.4.2',
  'zarr',
  'scipy',
  'pandas',
  'click',
]

[project.scripts]
forecast = "skyrim.forecast:main"

[tool.setuptools.packages.find]
include = ["skyrim", "skyrim.*", "remote"]
exclude = ["docs*", "tests*", "notebooks*", "assets*", "outputs*"]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "pytest",
  "tox",
  "bumpver",
  'coverage',
  "twine",
  "build",
]

[project.urls]
"Homepage" = "https://github.com/secondlaw-ai/skyrim"
"Tracker" = "https://github.com/secondlaw-ai/skyrim/issues"
"Docs" = "https://github.com/secondlaw-ai/skyrim"

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = false
skip-magic-trailing-comma = false
include = '\.pyi?$'
exclude = '''
/(
  \.git  # Git version control directory
  | \.tox  # tox environment directories
  | \.venv  # Virtual environment directories
  | build  # Build output directory
  | dist  # Distribution output directory
  | migrations  # Database migrations in Django/Flask projects
  | __pycache__  # Python bytecode cache directories
  | .*\.egg-info  # Egg information directories
  | .*\.whl  # Wheel package files
  | .*/tests/resources  # Test resource files, typically not code
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git"]
asyncio_mode = "auto"

# ==== Coverage.py configuration (ran using pytest-cov) ====
# See: https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
branch = true
concurrency = ["multiprocessing", "thread"]
source = ["skyrim"]

[tool.coverage.xml]
output = "skyrim.coverage.xml"

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
omit = ["tests/*"]
show_missing = true
fail_under = 20

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
